--- a/Whatsthat/Whatsthat/Base.lproj/Main.storyboard
+++ b/Whatsthat/Whatsthat/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KDo-9q-1yQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KDo-9q-1yQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -42,7 +42,7 @@
                                         <state key="normal" title="Camera"/>
                                         <connections>
                                             <action selector="cameraButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0Jy-QV-XrF"/>
-                                            <segue destination="1Jy-Xn-aZI" kind="show" id="AMU-YH-0wV"/>
+                                            <segue destination="I6Y-Bk-jxu" kind="show" identifier="photoIdentificationSegue" id="M94-Hm-IQe"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="trC-1z-XrN">
@@ -99,37 +99,54 @@
             <point key="canvasLocation" x="881" y="555"/>
         </scene>
         <!--Photo Identification View Controller-->
-        <scene sceneID="8VE-iN-Ux5">
+        <scene sceneID="E9u-ET-GeT">
             <objects>
-                <viewController id="1Jy-Xn-aZI" customClass="PhotoIdentificationViewController" customModule="Whatsthat" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="OSQ-cv-xHF">
+                <viewController id="I6Y-Bk-jxu" customClass="PhotoIdentificationViewController" customModule="Whatsthat" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eUY-K5-lCm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3CK-OV-QWm">
-                                <rect key="frame" x="131" y="637" width="123" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                <state key="normal" title="Select Image"/>
-                                <connections>
-                                    <action selector="selectImage:" destination="1Jy-Xn-aZI" eventType="touchUpInside" id="HEf-uG-sit"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Set-oo-SO0">
-                                <rect key="frame" x="0.0" y="64" width="375" height="523"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="bfw-im-iZF">
+                                <rect key="frame" x="0.0" y="64" width="375" height="539"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="59a-oP-XjQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="269.5"/>
+                                    </imageView>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3ab-zx-8FF">
+                                        <rect key="frame" x="0.0" y="269.5" width="375" height="269.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="GoogleResult" id="Cdd-R0-Owd">
+                                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Cdd-R0-Owd" id="cvA-4j-4YM">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="Qs8-9K-6iN"/>
+                        <constraints>
+                            <constraint firstItem="bfw-im-iZF" firstAttribute="leading" secondItem="eUY-K5-lCm" secondAttribute="leading" id="H54-Jh-F31"/>
+                            <constraint firstItem="bfw-im-iZF" firstAttribute="top" secondItem="bT5-2l-6pQ" secondAttribute="top" id="Jzh-xc-rp5"/>
+                            <constraint firstItem="bfw-im-iZF" firstAttribute="centerY" secondItem="eUY-K5-lCm" secondAttribute="centerY" id="SYD-H4-hzf"/>
+                            <constraint firstItem="bfw-im-iZF" firstAttribute="centerY" secondItem="eUY-K5-lCm" secondAttribute="centerY" id="f5K-d0-IWR"/>
+                            <constraint firstItem="bfw-im-iZF" firstAttribute="centerX" secondItem="eUY-K5-lCm" secondAttribute="centerX" id="m0F-fd-aA4"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bT5-2l-6pQ"/>
                     </view>
                     <connections>
-                        <outlet property="imageView" destination="Set-oo-SO0" id="5wD-66-HlX"/>
+                        <outlet property="imageView" destination="59a-oP-XjQ" id="T0f-xh-5Ws"/>
+                        <outlet property="resultTableView" destination="3ab-zx-8FF" id="g2O-3m-gQo"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aCx-fu-Khe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6pR-IE-vGN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="895" y="-609"/>
+            <point key="canvasLocation" x="1696.8" y="-594.15292353823088"/>
         </scene>
     </scenes>
 </document>
