--- a/Whatsthat/Whatsthat/Base.lproj/Main.storyboard
+++ b/Whatsthat/Whatsthat/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KDo-9q-1yQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KDo-9q-1yQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -93,6 +93,9 @@
                             <outlet property="delegate" destination="vMw-Jx-VWz" id="0dv-a0-QHT"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <segue destination="eZK-RT-Oa6" kind="show" identifier="FavoriteDetailSegue" id="dmE-Dj-MXn"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xvs-2s-Z5o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -239,4 +242,7 @@
             <point key="canvasLocation" x="2837.5999999999999" y="-594.15292353823088"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="dmE-Dj-MXn"/>
+    </inferredMetricsTieBreakers>
 </document>
